Fix basic info alignment

--- a/css/style.css
+++ b/css/style.css
@@ -596,6 +596,17 @@ b {
 }
 
 /*========================= About Me =======================*/
+.panel-box.basic-info-left,
+.panel-box.basic-info-right {
+	min-height: 320px !important;
+}
+@media only screen and (min-width: 768px) and (max-width: 991px)
+{
+	.panel-box.basic-info-left,
+	.panel-box.basic-info-right {
+		min-height: 347px !important;
+	}
+}
 
 .section-title {
 	width: 100%;
